neic-ahm17/nb-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: APPNAME
  namespace: tutorial
spec:
  type: NodePort
  ports:
  - port: 8888
    nodePort: 32000
    name: http
  selector:
    app: APPNAME
